enhance code move initialization to User constructor (Expert pattern), rename method in JWTService & refactor in JwtAuthFilter